debag first-screen img height

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="icon">
                 <div class="ic_1 bold bounceIn wow data-wow-duration=2s data-wow-delay=5s">Беглое повторение базовых тегов HTML и CSS</div>
                 <div class="line fadeIn wow"></div>
-                <div class="ic_2 bold bounceIn wow data-wow-duration=2s data-wow-delay=5s"">Верстка реального проекта и погружение в разработку</div>
+                <div class="ic_2 bold bounceIn wow data-wow-duration=2s data-wow-delay=5s">Верстка реального проекта и погружение в разработку</div>
                 <div class="line fadeIn wow"></div>
-                <div class="ic_3 bold bounceIn wow data-wow-duration=2s data-wow-delay=5s"">Создание отзывчивости для сверстанного проекта</div>
+                <div class="ic_3 bold bounceIn wow data-wow-duration=2s data-wow-delay=5s">Создание отзывчивости для сверстанного проекта</div>
         </div>
     </article>
 </section>
